# Miku

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fyd/miku/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: face.vmd  hand.vmd  hou.vmd  hou1.vmd  ik.vmd  ik2.vmd  ik3.vmd
app/src/main/assets/motion/: motion.vmd
app/src/main/java/com/fyd/miku/: AxisRender.java  DefaultModelManager.java  MainActivity.java  MikuGLRender.java
app/src/main/java/com/fyd/miku/helper/: AssetHelper.java  CacheHelper.java  InterpolatorHelper.java  MatrixHelper.java  PermissionHelper.java  ResourceHelper.java  ShaderHelper.java
app/src/main/java/com/fyd/miku/math/: Vec2.java  (+1 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: axis_frag.frag  axis_vert.vert  mmd.vert  mmd_frag.frag  mmd_vert.vert  plan_frag.frag  plan_vert.vert
app/src/main/res/values/: strings.xml
app/src/test/java/com/fyd/miku/: ExampleUnitTest.java
bulletnative/: build.gradle
bulletnative/src/androidTest/java/com/fyd/bulletnative/: ExampleInstrumentedTest.java
bulletnative/src/main/: AndroidManifest.xml
bulletnative/src/main/cpp/: BulletDebugDrawer.cpp  BulletDebugDrawer.h  CMakeLists.txt  MMDPhysics.cpp  MMDPhysics.h  log.h  native-lib.cpp
bulletnative/src/main/cpp/gl/: gl_utils.cpp  gl_utils.h
bulletnative/src/main/java/com/fyd/bullet/: Physics.java
bulletnative/src/main/res/values/: strings.xml
bulletnative/src/test/java/com/fyd/bulletnative/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
